Renamed integration test to integration_agent_test from integration_agent_spec

--- a/spec/Rakefile
+++ b/spec/Rakefile
@@ -10,7 +10,7 @@ end
 
 desc "Run integration tests"
 RSpec::Core::RakeTask.new(:integration) do |t|
-    t.pattern = 'tests/integration/**/*_spec.rb'
+    t.pattern = 'tests/integration/**/*_test.rb'
     t.rspec_opts = File.read("spec.opts").chomp
 end
 
